# controllers/userController.js
@@ -12,6 +12,18 @@ const userController={
             Response:users
         });
     },
+    getUsersById:async(req,res)=>{
+        let users=await Users.findById(req.params.user_id).then().catch(er=>{
+            return res.status(200).json({
+                status:500,
+                message:"error server"
+            });
+        });
+        res.status(200).json({
+            status:200,
+            Response:users
+        });
+    },
     createUser:async(req,res)=>{
         let {
             fist_name,
@@ -39,7 +51,23 @@ const userController={
                 status: 200,
                 Response: saveduser
             });
-    }
+    },
+    loginUsers: async (req, res) => {
+        let {username,password}=req.body;
+        let users = await Users.find({
+                username:username,
+                password:password
+            }).then().catch(er => {
+            return res.status(200).json({
+                status: 500,
+                message: "error server"
+            });
+        });
+        res.status(200).json({
+            status: 200,
+            Response: users
+        });
+    },
 };
 
 module.exports=userController;
