# route/v1/users.js
@@ -4,6 +4,8 @@ const userController = require("../../controllers/userController");
 const router = express.Router();
 
 router.get("/",userController.getUsers)
+        .get("/:user_id/detail",userController.getUsersById)
+        .post("/login",userController.loginUsers)
         .post("/create",userController.createUser)
 
 module.exports = router;
