# swagger.json
@@ -20,6 +20,50 @@
         "application/json"
     ],
     "paths": {
+        "/users/login": {
+            "post": {
+                "description": "Login a new user to process all the query ",
+                "summary": "login a user",
+                "tags": [
+                    "All Endpoints"
+                ],
+                "operationId": "login-a-User",
+                "deprecated": false,
+                "produces": [
+                    "application/json"
+                ],
+                "consumes": [
+                    "application/x-www-form-urlencoded"
+                ],
+                "parameters": [
+                    {
+                        "name": "Key",
+                        "in": "header",
+                        "required": false,
+                        "default": "YtLddXUVwoAtK0IbB6ugGNENizaAEqm5bWUgBdfvuwZ0e3eSMRx9DMYPdh55nrmNW7Y5CLdOchGFR9huUuOS39ySsSON83Xbr9vuYpSGhxvsAcXUgJlVhPlFhdQEYNhVTpC8jgjkghjhka787KJHJKHujyuhsa6",
+                        "type": "string"
+                    },                    
+                    {
+                        "name": "username",
+                        "in": "formData",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "password",
+                        "in": "formData",
+                        "required": true,
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "",
+                        "headers": {}
+                    }
+                }
+            }
+        },
         "/users": {
             "get": {
                 "description": "Display all users registered by Defining the Offset and the limit of data to be display",
@@ -80,6 +124,59 @@
                 }
             }
         },
+        "/users/{user_id}/detail": {
+            "get": {
+                "description": "Display all details of a user registered by user_id",
+                "summary": "Get Users by ID",
+                "tags": [
+                    "All Endpoints"
+                ],
+                "operationId": "get_User_byID",
+                "deprecated": false,
+                "produces": [
+                    "application/json"
+                ],
+                "consumes": [
+                    "application/x-www-form-urlencoded"
+                ],
+                "parameters": [
+                    {
+                        "name": "auth-token",
+                        "in": "header",
+                        "required": false,
+                        "default": "{token}",
+                        "type": "string"
+                    },
+                    {
+                        "name": "App",
+                        "in": "header",
+                        "required": false,
+                        "default": "Admin",
+                        "type": "string"
+                    },
+                    {
+                        "name": "Key",
+                        "in": "header",
+                        "required": false,
+                        "default": "YtLddXUVwoAtK0IbB6ugGNENizaAEqm5bWUgBdfvuwZ0e3eSMRx9DMYPdh55nrmNW7Y5CLdOchGFR9huUuOS39ySsSON83Xbr9vuYpSGhxvsAcXUgJlVhPlFhdQEYNhVTpC8jgjkghjhka787KJHJKHujyuhsa6",
+                        "type": "string"
+                    },
+                    {
+                        "name": "user_id",
+                        "in": "path",
+                        "required": true,
+                        "default": "60d231964cd1bc46bc3c2e8d",
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "",
+                        "headers": {}
+                    }
+                }
+            }
+        },
         "/users/create": {
             "post": {
                 "description": "create a new user with all necessary information ",
@@ -95,7 +192,28 @@
                 "consumes": [
                     "application/x-www-form-urlencoded"
                 ],
-                "parameters": [                    
+                "parameters": [   
+                    {
+                        "name": "auth-token",
+                        "in": "header",
+                        "required": false,
+                        "default": "{token}",
+                        "type": "string"
+                    },
+                    {
+                        "name": "App",
+                        "in": "header",
+                        "required": false,
+                        "default": "Admin",
+                        "type": "string"
+                    },
+                    {
+                        "name": "Key",
+                        "in": "header",
+                        "required": false,
+                        "default": "YtLddXUVwoAtK0IbB6ugGNENizaAEqm5bWUgBdfvuwZ0e3eSMRx9DMYPdh55nrmNW7Y5CLdOchGFR9huUuOS39ySsSON83Xbr9vuYpSGhxvsAcXUgJlVhPlFhdQEYNhVTpC8jgjkghjhka787KJHJKHujyuhsa6",
+                        "type": "string"
+                    },                 
                     {
                         "name": "Key",
                         "in": "header",
